--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
+NEXT_PUBLIC_USER_MAIL = AKIA5UAUEEU6VFO4TCA7
+NEXT_PUBLIC_USER_MAIL_PASSWORD = BDFT5QfxEbReHmM/QESjUSeZThSKgJ5qixqxvqNDpXmO
+NEXT_PUBLIC_WORDPRESS_API_ENDPOINT = https://apibkofc.globalvoices.com/graphql
 MY_SECRET_TOKEN = barcelona
